telekinetic: fix overflow;

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   --color-accent: #f9d091;
   --color-console-text: #eee;
   --color-console-background: #07111D;
-  --overflow: visible;
+  --overflow: hidden;
   --font-main: 'player-start-2p'
 }
 
